# SimpleLogger

./: .gitmodules  CMakeLists.txt  FormatterColorsBuilder.cpp  GlobalContextInstance.cpp  Logger.cpp  LoggerFormatter.cpp  LoggingContext.cpp  README.md
include/: FormatterColorsBuilder.h  FormatterType.h  FormatterTypes.h  GlobalContextInstance.h  Logger.h  LoggerFormatter.h  LoggerTypes.h  LoggingContext.h  TsQueue.h
tests/: FormatterColorsBuilder_test  FormatterColorsBuilder_test.cpp  LoggerFormatter_test  LoggerFormatter_test.cpp  LoggingContext_test  LoggingContext_test.cpp  build.sh  main  main.cpp
